[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Graphics/1bitpack_mono_trans_packed.png" type="Texture" id=1]
[ext_resource path="res://Objects/Door/Door.gd" type="Script" id=2]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0.00555556, 0 ), 0.0, 0.1875, 0, 0, Vector2( 1, 1 ), 2.65204, 0.0, 0, 0 ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 8 )

[node name="Door" type="StaticBody2D"]
collision_mask = 0
script = ExtResource( 2 )
open_direction = 0
open_curve = SubResource( 1 )

[node name="Frame" type="Sprite" parent="."]
position = Vector2( 1, 0 )
z_index = 5
texture = ExtResource( 1 )
offset = Vector2( 0, -8 )
region_enabled = true
region_rect = Rect2( 48, 48, 4, 16 )

[node name="Door" type="Sprite" parent="."]
scale = Vector2( 1e-05, 1 )
texture = ExtResource( 1 )
offset = Vector2( -4, -8 )
flip_h = true
region_enabled = true
region_rect = Rect2( 52, 48, 8, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, -8 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32768
collision_mask = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -8 )
shape = SubResource( 3 )

[node name="AudioSFX" type="AudioStreamPlayer2D" parent="."]
bus = "SFX"

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_body_exited"]
